# tool-git

./: .copier-answers.yml  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPERS.md  Makefile  README.md  codecov.yaml  docker-compose.appgarden.yml  docker-compose.yml  kamiwaza.json  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.ai/: README.md
.claude/: settings.json
.github/: repo-setup.yml.example
docs/: auth-integration-guide.md  data-integration-guide.md  embedding-and-querying-guide.md  environment-setup.md  extension-developer-guide.md  health-checks.md  index.md  logout-flow.md  migration-guide.md  modules.md  path-based-routing-cheatsheet.md  service-templates.md  template-management.md  vectordb-text-field-issue.md
make/: build.mk  common.mk  demo.mk  dev.mk  discovery.mk  help.mk  metadata.mk  quality.mk  templates.mk
scripts/: PACKAGE-README.md  build-extension.sh  build-registry.py  bump-version.sh  demo-garden.sh  demo-lifecycle.sh  discover-extensions.sh  export-images.py  format-help.py  install-entrypoints.sh  install-shared-libs.sh  kamiwaza-entrypoint.sh  kamiwaza-registry.env.template  list-published.py  manage-templates.py  package-setup.sh  package-shared-libs.sh  publish-images.sh  registry-remove.py  registry-upsert.py  serve-registry.py  setup-github-repo.sh  (+8 more)
shared/python/: README.md  pyproject.toml
shared/python/kamiwaza_auth/: README.md  __init__.py  client.py  config.py  errors.py  identity.py  jwt.py  pyproject.toml
shared/python/kamiwaza_auth/endpoints/: __init__.py  session.py
(+104 files in other folders)
